header ist fast fertig

--- a/index.html
+++ b/index.html
@@ -51,6 +51,9 @@
                 <div class="hovernav">
                     <li><a href="https://zeldacovers.github.io/dokumentation101/">HTML/CSS</a></li>
                 </div>
+                <div class="hovernav">
+                    <li><a href="https://zeldacovers.github.io/dokumentationjavaskript/index.html">Javaskript/Jquery/PHP</a></li>
+                </div>
             </ul>
         </nav>
     </header>
