--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         <nav id="nav">
             <ul id="liststyle">
                 <div class="hovernav">
-                    <li><a href="index.html">SQL Datenbanken</a></li>
+                    <li><a href="https://zeldacovers.github.io/dokumentationen/">SQL Datenbanken</a></li>
                 </div>
                 <div class="hovernav">
                     <li><a href="https://zeldacovers.github.io/dokumentation101/">HTML/CSS</a></li>
