ohisch wer aber schön

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 <p id="ueberschrift">Inhaltsverzeichnis</p>
                 <div class="dropdown">
                     <div class="dropdown-content">
-                        <a class="dropdowna" href="#rational">Relationale Datenbanken</a>
+                        <a class="dropdowna" href="#entwicklung">Relationale Datenbanken</a>
                         <a class="dropdowna" href="#datmod">Datenbanken modellieren</a>
                         <a class="dropdowna" href="#prim">Primary key</a>
                         <a class="dropdowna" href="#foreign">Foreign key</a>
@@ -57,6 +57,49 @@
             </ul>
         </nav>
     </header>
+    <main>
+        <p style="text-align: justify;">&nbsp;</p>
+        <div id="entwicklung" class="style1">
+            <h1>Entwicklungsumgebung</h1>
+            <hr>
+            <p>wenn man mit PHP arbeitet, gibt es keinen anderen Weg als diese php Dokumente auf einen Webserver zu laden
+                um sie auszuführen. für HTML/CSS wird kein Server zum abrufen der Dateien Benötigt, da diese Clientseitig
+                geladen werden deswegen benütigt man nicht mehr als ein Browser. Ich selbst benutze den chrome Browser von
+                Google, da die Entwicklertools sehr ausgereift sind. Um mit HTML, CSS und PHP zu programmieren/schreiben
+                braucht man nicht unbedingt einen speziellen Editor, jedoch erleichtert ein Editor die mühsame Fehlersuche
+                wesentlich. Deswegen benutze ich auch den Visual Studio Code von Microsoft denn es können auch nützliche
+                Add-Ons installiert werdem, welche beispielsweise die Tags automatisch schliessen. Sobald man den XAMPP Webserver
+                heruntergeladen hat kann man mittels dem XAMPP Control Panel den Apache Dienst starten, und die Dashboard
+                Seite von XAMPP über den localhost erreichen. Wenn man in der Browsersuchleiste localhost eingibt wird der
+                htdocs Ordner nach Dateien durchsucht, welche er ausgeben kann. Im htdocs Ordner kann man weiter Unterordner
+                erstellen und diese auch via "localhost/meinorder/datei.php" abrufen.</p>
+
+            <div class="downloadlink">
+                <div class="flexibexi">
+                    <div class="downloaditem">
+                        <a href="https://az764295.vo.msecnd.net/stable/a3db5be9b5c6ba46bb7555ec5d60178ecc2eaae4/VSCodeUserSetup-x64-1.32.3.exe">VS
+                            Code download</a>
+                    </div>
+                    <div class="downloaditem">
+                        <a href="https://www.apachefriends.org/xampp-files/7.1.27/xampp-windows-x64-7.1.27-0-VC14-installer.exe">XAMPP
+                            download
+                        </a>
+                    </div>
+                    <div class="downloaditem">
+                        <a href="https://www.apachefriends.org/xampp-files/7.1.27/xampp-windows-x64-7.1.27-0-VC14-installer.exe">Google
+                            Chrom Download
+                        </a>
+                    </div>
+                </div>
+                <div class="logoimg">
+                    <img class="logoitem" src="bilder/vs_code.png" alt="vscode">
+                    <img class="logoitem" src="bilder/Google_Chrome.png" alt="chrome">
+                    <img class="logoitem" src="bilder/XAMPP.png" alt="xampp">
+                </div>
+            </div>
+
+        </div>
+    </main>
 
 
 
