ein paar sachen

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 <p id="ueberschrift">Inhaltsverzeichnis</p>
                 <div class="dropdown">
                     <div class="dropdown-content">
-                        <a class="dropdowna" href="#entwicklung">Relationale Datenbanken</a>
+                        <a class="dropdowna" href="#entwicklung">Entwicklungsumgebung</a>
                         <a class="dropdowna" href="#datmod">Datenbanken modellieren</a>
                         <a class="dropdowna" href="#prim">Primary key</a>
                         <a class="dropdowna" href="#foreign">Foreign key</a>
@@ -75,23 +75,23 @@
                 erstellen und diese auch via "localhost/meinorder/datei.php" abrufen.</p>
 
             <div class="downloadlink">
-                <div class="flexibexi">
+                <div data-aos="flip-left"  data-aos-duration="800"class="flexibexi">
                     <div class="downloaditem">
-                        <a href="https://az764295.vo.msecnd.net/stable/a3db5be9b5c6ba46bb7555ec5d60178ecc2eaae4/VSCodeUserSetup-x64-1.32.3.exe">VS
+                        <a class="hovera" href="https://az764295.vo.msecnd.net/stable/a3db5be9b5c6ba46bb7555ec5d60178ecc2eaae4/VSCodeUserSetup-x64-1.32.3.exe">VS
                             Code download</a>
                     </div>
                     <div class="downloaditem">
-                        <a href="https://www.apachefriends.org/xampp-files/7.1.27/xampp-windows-x64-7.1.27-0-VC14-installer.exe">XAMPP
+                        <a class="hovera" href="https://www.apachefriends.org/xampp-files/7.1.27/xampp-windows-x64-7.1.27-0-VC14-installer.exe">XAMPP
                             download
                         </a>
                     </div>
                     <div class="downloaditem">
-                        <a href="https://www.apachefriends.org/xampp-files/7.1.27/xampp-windows-x64-7.1.27-0-VC14-installer.exe">Google
+                        <a class="hovera" href="https://www.apachefriends.org/xampp-files/7.1.27/xampp-windows-x64-7.1.27-0-VC14-installer.exe">Google
                             Chrom Download
                         </a>
                     </div>
                 </div>
-                <div class="logoimg">
+                <div data-aos="flip-up" data-aos-duration="800" class="logoimg">
                     <img class="logoitem" src="bilder/vs_code.png" alt="vscode">
                     <img class="logoitem" src="bilder/Google_Chrome.png" alt="chrome">
                     <img class="logoitem" src="bilder/XAMPP.png" alt="xampp">
