--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
             </fieldset>
             <hr class="hrspecial" data-aos="fade-right" data-aos-duration="1000">
             <fieldset data-aos="fade-right" data-aos-duration="1000">
-                <legend>Texteingabe (Mehrzeilig)</legend>
+                <legend>Texteingabe (Mehrzeilig):</legend>
                 <textarea name="comments" id="shj" cols="40" rows="4">Kommentarbox</textarea>
             </fieldsetv>
 
