--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
             <fieldset data-aos="fade-right" data-aos-duration="1000">
                 <legend>Texteingabe (Mehrzeilig):</legend>
                 <textarea name="comments" id="shj" cols="40" rows="4">Kommentarbox</textarea>
-            </fieldsetv>
+            </fieldset>
 
         </div>
     </main>
