also es muss gepusht werden

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                         <a class="dropdowna" href="#dom">D.O.M</a>
                         <a class="dropdowna" href="#php">Was ist PHP?</a>
                         <a class="dropdowna" href="#phpsyntax">Aufbau von PHP</a>
-                        <a class="dropdowna" href="#dllll">DDL</a>
+                        <a class="dropdowna" href="#functionphp">Funktionen PHP</a>
                         <a class="dropdowna" href="#dcl">DCL</a>
                         <a class="dropdowna" href="#dml">DML</a>
                         <a class="dropdowna" href="#dql">DQL</a>
@@ -228,7 +228,28 @@
                 ausgeben";&nbsp;<br />}&nbsp;<br />?&gt;
             </p>
             <p>Um diese Funktion dann später zu benutzen, muss man folgende Syntax verwenden:</p>
-            <p class="code">&lt;?php&nbsp;<br />frame();&nbsp;<br />?&gt;<br>&nbsp;</p>
+            <p class="code" class="code" data-aos="flip-up" data-aos-duration="1000">
+                &lt;?php&nbsp;<br />frame();&nbsp;<br />?&gt;<br>&nbsp;</p>
+        </div>
+        <div class="style1" id="functionphp" data-aos="flip-up" data-aos-duration="1000">
+            <h1> Funktionen PHP</h1>
+            <hr>
+            <p>Die folgenden Funktionen welche ich vorstellen werde empfinde ich als die Wichtigsten,
+                falls Sie jedoch trotdem noch mehr Funktionen von PHP lernen wollen klicken sie auf den Button unten
+                rechts.
+                fangen wir also mit dem ersten Funktion an:
+                <br>
+                <br>
+                <br>
+
+                <b>Post/Get</b>: mit diesen Beiden funktionen hat man die Möglichkeit eingegebene Werte in einem Vormular
+                abzurufen und wider anzuzeigen. Jedoch gibt es einen wesentlichen unterschied zwischen dem Befehl Get und Post. die
+                unten stehenden Bilder denke ich erklären den unterschied ziemlich gut.
+            </p>
+            <div class="bilder2">
+                <img class="bildweite" src="bilder/difference-between-get-and-post.png" alt="get/post">
+                <img class="bildweite" id="specialbild2" src="bilder/Get-vs-Post.jpg" alt="get/post2">
+            </div>
         </div>
     </main>
 
